# git-activity-report

./: .gitignore  .markdownlint.yaml  .rustfmt.toml  AGENTS.md  ANALYSIS_PROMPT.md  CHECKPOINT.md  Cargo.toml  ESTIMATIONS.md  FEEDBACK.md  Justfile  LAYOUT_SPEC.md  NEXT_STEPS.md  NOTES.md  README.md  SPACING.md  SPACING_SPEC.md  TESTING.md  git-activity-report.py
.agents/: repo_overlay.json
.agents/cycles/: 0002.feat-github-pr-enrichment-planning-and-scaffolding.2025-08-31T19-51-26.md  0003.apply-feedback-additive-schema-cli-ux-improvements.2025-09-02T12-09-27.md  0004.pr-reviewers-classification-emails-for-each-spelled-numbers-docs-man-notes-on-nl-windows.2025-09-06T15-57-53.md  0006.python-alias-check.2025-09-06T22-28-11.md  0007.audit-github-api-lines-467-483.2025-09-06T22-40-15.md  0008.evaluate-src-params-rs-usefulness-and-possible-refactor.2025-09-07T11-52-49.md  0009.efficiency-audit-across-codebase-duplicate-work-git-calls-i-o.2025-09-07T11-59-19.md  0009.pull-request.md  0010.extract-common-helpers-to-reduce-duplication-and-complexity.2025-09-07T13-14-57.md  0011.refactor-range-processor-helpers-spacing.2025-09-09T14-19-55.md  0012.plan-integrate-time-estimation-enrichment-feat-add-time-estimation-enrichment.2025-09-12T21-43-46.md  0013.spacing-assign-then-push-baseline.2025-09-15T10-01-22.md  0014.chore-update-ureq-to-3-1-1.2025-09-16T11-43-58.md
.config/: nextest.toml
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: agent-cycle-check.yml  ci.yml  release.yml
docs/: CHECKPOINT.md  ESTIMATE_TUNING.md  LAYOUT_SPEC.md  NEXT_STEPS.md  NLP_DATE_WINDOWS.md  OPERATING_PROCESS_GUIDE.md  TUNING_DISCOVERY.md
docs/man/: git-activity-report.1
prototype/: git-activity-report.py
scripts/: check_cycle_presence.sh  check_module_headers.sh  new_cycle.py  new_cycle.sh  new_cycle_hook.sh  spacing-audit.sh
src/: cli.rs  commit.rs  enrich.rs  gitio.rs  main.rs  manifest.rs  model.rs  params.rs  range_processor.rs  range_windows.rs  render.rs  util.rs  window.rs
src/enrichment/: effort.rs  github_api.rs  github_pull_requests.rs  mod.rs
src/ext/: mod.rs  serde_json.rs
tests/: Justfile  cli_windows.rs  for_phrases.rs  full_unmerged.rs  integration.rs  patch_behaviors.rs  schema_validation.rs  simple_end_to_end.rs  top_manifest.rs
tests/common/: mod.rs
tests/fixtures/: 2025.08.12-14.03-aaaaaaaaaaaa.json  2025.08.13-09.12-bbbbbbbbbbbb.json  git-activity-report.simple.fixture.json  manifest-2025-08.json  manifest.json
tests/integration/: cli_full_snapshot.rs  cli_gen_man.rs  cli_simple_snapshot.rs  cli_windows.rs  effort_estimation.rs  for_phrases.rs  full_manifest_snapshot.rs  full_shard_snapshot.rs  full_unmerged.rs  gen_man.rs  github_metrics.rs  overall_manifest.rs  patch_behaviors.rs  report_end_to_end.rs  schema_validation.rs  simple_snapshot.rs
tests/integration/snapshots/: integration__cli_full_snapshot__cli_full_manifest.snap  integration__cli_full_snapshot__cli_full_top.snap  integration__simple_snapshot__simple_report_snapshot.snap  (+3 more)
tests/schemas/: README.md  git-activity-report.commit.schema.json  git-activity-report.full.range.schema.json  git-activity-report.full.top.schema.json  git-activity-report.overall.schema.json  git-activity-report.report.schema.json  git-activity-report.simple.schema.json
tests/scripts/: compare-outputs.sh  make-fixture-repo.sh
tests/snapshots/: cli_full_snapshot.rs  cli_simple_snapshot.rs  full_manifest_snapshot.rs  full_shard_snapshot.rs  integration__cli_full_snapshot__cli_full_manifest.snap  integration__cli_full_snapshot__cli_full_top.snap  integration__cli_simple_snapshot__cli_simple_snapshot.snap  integration__full_manifest_snapshot__full_manifest_snapshot.snap  integration__full_shard_snapshot__snapshot_first_shard_commit.snap  integration__simple_snapshot__simple_report_snapshot.snap  simple_snapshot.rs
tests/support/: Cargo.toml  README.md
tests/support/src/: lib.rs
(+2 files in other folders)
