[package]
name = "git-activity-report"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["James Cox <james@imaj.es>"]
description = "Export Git activity to JSON (simple or sharded)"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# time crate provides local offset & formatting if/when needed
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
# reserved for parallel per-commit processing (wire later)
rayon = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
assert_cmd = "2.0"
