[package]
name = "git-activity-report"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["James Cox <james@imaj.es>"]
description = "Export Git activity to JSON (simple or sharded)"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# time crate provides local offset & formatting if/when needed
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
# reserved for parallel per-commit processing (wire later)
rayon = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1.11"
ureq = { version = "2.12.1", default-features = true, features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
regex = "1.11"
proptest = "1.7.0"
insta = "1.43.1"
