[package]
name = "git-activity-report"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["James Cox <james@imaj.es>"]
description = "Export Git activity to JSON (simple or sharded)"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
chrono-english = "0.1"
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
jsonschema = "0.33.0"
# reserved for parallel per-commit processing (wire later)
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# time crate provides local offset & formatting if/when needed
time = { version = "0.3", features = [
  "formatting",
  "macros",
  "local-offset",
  "parsing",
] }
two_timer = "2.2.5"
ureq = { version = "=3.1.1", default-features = true, features = ["json"] }
once_cell = "1"

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.43.2", features = ["json", "redactions"] }
predicates = "3.1"
proptest = "1.8.0"
regex = "1.11"
serial_test = "3.1.1"
tempfile = "3.10"
test_support = { path = "tests/support", features = ["serde", "tokio"] }

[features]
# Feature-gated test hooks: compile helpers for integration tests when explicitly enabled
testutil = []
